hphp/test/zend/good/Zend/tests/bug43344_13.php.expectf

Fatal error: Undefined constant 'bar' in %s/bug43344_13.php on line 2
